Closes #179. used flexbox on child-scroll to fix wrap / heights for misaligned children when some had index_subtitle and some did not

--- a/app/assets/stylesheets/carnegie/carnegie.scss
+++ b/app/assets/stylesheets/carnegie/carnegie.scss
@@ -541,6 +541,15 @@ a {
 			.index_subtitle {
 				color: darken($color_3, 30%);
 			}
+			@media(min-width: 768px) {
+				.child-scroll {
+					display: flex;
+					flex-wrap: wrap;
+					.child-container {
+						height: 100%;
+					}
+				}
+			}
 		}
 		&:not(.list-view) {
 			.index-show-tombstone-fields {
